# gosub-sonar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  security.yml
docs/: architecture.md  net-design.md  pump.md
examples/: fetcher.rs  fetcher_harness.rs  simple_fetch.rs
src/: http.rs  lib.rs  net.rs  types.rs
src/http/: response.rs
src/net/: events.rs  fetch.rs  fetcher.rs  fetcher_context.rs  fs_utils.rs  hsts.rs  mixed_content.rs  null_emitter.rs  observer.rs  proxy.rs  pump.rs  referrer.rs  request_ref.rs  shared_body.rs  simple.rs  test_support.rs  types.rs  utils.rs
tests/: e2e.rs
