[package]
name = "gosub-sonar"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
readme = "README.md"
description = "Browser-agnostic priority-scheduled HTTP/HTTPS fetching library"

[dependencies]
anyhow = "1.0.102"
url = "2.5.8"
cow-utils = "0.1"
cookie = "0.18.1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
http = "1"
log = "0.4"
tracing = "0.1"
thiserror = "2"
futures-core = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
tempfile = "3.21.0"
dashmap = "7.0.0-rc2"
chrono = "0.4"

[dev-dependencies]
cow-utils = "0.1.3"
flate2 = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.52.3", features = ["rt", "io-util", "sync", "time", "macros", "net"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
reqwest = { version = "0.13.3", features = ["rustls", "stream", "blocking", "gzip", "brotli", "deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13.3", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
