[package]
name = "gosub-sonar"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
readme = "README.md"
description = "Browser-agnostic priority-scheduled HTTP/HTTPS fetching library"
repository = "https://github.com/gosub-io/gosub-sonar"
documentation = "https://docs.rs/gosub-sonar"
homepage = "https://gosub.io"
keywords = ["http", "fetch", "scheduler", "networking", "async"]
categories = ["network-programming", "web-programming::http-client", "asynchronous"]

[dependencies]
anyhow = "1.0.102"
url = "2.5.8"
cow-utils = "0.1"
cookie = "0.18.1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
http = "1"
log = "0.4"
tracing = "0.1"
thiserror = "2"
futures-core = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
tempfile = "3.21.0"
dashmap = "6"
chrono = "0.4"
tokio = { version = "1.52.3", features = ["rt", "io-util", "sync", "time", "macros", "net"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
reqwest = { version = "0.13.3", features = ["rustls", "stream", "blocking", "gzip", "brotli", "deflate"] }
flate2 = { version = "1", optional = true }

[features]
# Expose the in-process mock HTTP server (net::test_support) to downstream
# integration tests and examples.
test-support = ["dep:flate2"]

[dev-dependencies]
cow-utils = "0.1.3"
flate2 = "1"
# rt-multi-thread is test-only: race-condition regression tests need real parallelism.
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }

[[example]]
name = "fetcher_harness"
required-features = ["test-support"]

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
