[package]
name = "gosub-sonar"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
readme = "README.md"
description = "Browser-agnostic priority-scheduled HTTP/HTTPS fetching library"
repository = "https://github.com/gosub-io/gosub-sonar"
documentation = "https://docs.rs/gosub-sonar"
homepage = "https://gosub.io"
keywords = ["http", "fetch", "scheduler", "networking", "async"]
categories = ["network-programming", "web-programming::http-client", "asynchronous"]

[dependencies]
anyhow = "1.0.102"
url = "2.5.8"
cow-utils = "0.1"
cookie = "0.18.1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
http = "1"
log = "0.4"
tracing = "0.1"
thiserror = "2"
futures-core = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
dashmap = "6"
chrono = "0.4"
flate2 = { version = "1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = "3.21.0"
tokio = { version = "1.52.3", features = ["rt", "io-util", "sync", "time", "macros", "net", "fs"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
reqwest = { version = "0.13.3", features = ["rustls", "stream", "blocking", "gzip", "brotli", "deflate"] }
# TLS for the test-support mock server, which needs a real certificate to exercise HTTPS-only
# behaviour such as HSTS. Optional here and mirrored in dev-dependencies so plain `cargo test`
# and downstream `test-support` builds both resolve them (same arrangement as flate2).
rcgen = { version = "0.14", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# tokio's wasm32-supported feature subset — "net" needs mio, which cannot build for
# wasm. reqwest's wasm backend delegates TLS, connections, redirects, cookies, and
# decompression to the browser's fetch(), so none of those features apply.
tokio = { version = "1.52.3", features = ["rt", "io-util", "sync", "time", "macros"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
reqwest = { version = "0.13.3", default-features = false, features = ["stream"] }
uuid = { version = "1", features = ["v4", "js"] }

[features]
# Expose the in-process mock HTTP server (net::test_support) to downstream
# integration tests and examples. Native-only: the mock server needs real sockets.
test-support = ["dep:flate2", "dep:rcgen", "dep:tokio-rustls"]

[dev-dependencies]
cow-utils = "0.1.3"
flate2 = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# rt-multi-thread is test-only: race-condition regression tests need real parallelism.
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
rcgen = "0.14"
tokio-rustls = "0.26"

[[example]]
name = "fetcher_harness"
required-features = ["test-support"]

[[test]]
name = "e2e"
required-features = ["test-support"]

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
